--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
   margin: 0;
 }
 
+h4 {
+  font-size: 20px;
+  margin: 5px;
+  text-transform: uppercase;
+}
+
 .counter {
   position: fixed;
   top: 50%;
@@ -80,4 +86,35 @@ body {
 
 .nums span.in {
   transform: translate(-50%, -50%) rotate(0deg);
+  animation: goIn 0.5 ease-in-out;
+}
+.nums span.out {
+  transform: translate(-50%, -50%) rotate(0deg);
+  animation: goOut 0.5 ease-in-out;
+}
+
+@keyframes goIn {
+  0% {
+    transform: translate(-50%, -50%) rotate(120deg);
+  }
+  30% {
+    transform: translate(-50%, -50%) rotate(-20deg);
+  }
+  60% {
+    transform: translate(-50%, -50%) rotate(10deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+}
+@keyframes goOut {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  60% {
+    transform: translate(-50%, -50%) rotate(20deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(-120deg);
+  }
 }
